--- a/src/views/index.pug
+++ b/src/views/index.pug
@@ -3,3 +3,7 @@ extends layout
 block content
   h1= title
   p Welcome to #{title}
+  p Use this document as a way to quickly start any new project.
+  p All you get is this text and a mostly barebones HTML document.
+  br
+  p Test Counter: #{counter}
